<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/btButtonTop"
        android:layout_width="427dp"
        android:layout_height="94dp"
        android:layout_marginTop="32dp"
        android:background="@color/buttonColor"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/textTopMain"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSalario"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"

        app:cardBackgroundColor="@color/colorLayout"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btButtonTop">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:gravity="left"
            android:orientation="vertical"


            >

            <TextView
                android:id="@+id/textSalario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="4dp"
                android:fontFamily="monospace"
                android:text="@string/textSalarioAnual"
                android:textColor="@color/white"
                android:textSize="18sp"

                app:layout_constraintBottom_toTopOf="@+id/miCajaDeTexto"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/textSalary"
                android:layout_width="170dp"
                android:layout_height="49dp"
                android:layout_marginStart="10dp"
                android:fontFamily="monospace"
                android:inputType="number"
                android:text="@string/inputText"
                android:textColor="@color/editTextColor"
                android:textSize="12sp"


                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="289dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Texto 1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Texto 2" />
    </LinearLayout>-->


    <androidx.cardview.widget.CardView
        android:id="@+id/cardPagas"
        android:layout_width="186dp"
        android:layout_height="120dp"


        app:cardBackgroundColor="@color/colorLayout"

        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btButtonTop">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPagas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="4dp"
                android:fontFamily="monospace"
                android:text="@string/textTitlePagas"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent" />
            <!-- Desplegable spinner pagas -->
            <Spinner
                android:id="@+id/spinnerListPagas"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:entries="@array/pagasList"
                android:fontFamily="monospace"
                android:popupBackground="@color/spinnerColor"
                android:spinnerMode="dropdown"
                android:textColor="@color/spinnerColor" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDiscapacidad"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"

        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/colorLayout"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDiscapacidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:layout_marginStart="4dp"
                android:fontFamily="monospace"
                android:text="@string/textTitleDiscap"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent" />
            <!-- Lista desplegable discapacidad (Spinner) -->
            <Spinner
                android:id="@+id/spinnerListDiscapacidad"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:entries="@array/textSpinnerDiscap"
                android:fontFamily="monospace"
                android:popupBackground="@color/spinnerColor"
                android:spinnerMode="dropdown"
                android:textColor="@color/spinnerColor" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="19dp"
        android:fontFamily="monospace"
        android:gravity="left"
        android:text="Edad:"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:translationZ="4dp"
        app:layout_constraintStart_toStartOf="@+id/cardEdad"
        app:layout_constraintTop_toTopOf="@+id/cardEdad" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEdad"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/colorLayout"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/numEdad"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:text="27"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"

                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSumarEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginEnd="26dp"
                    android:contentDescription="@string/sumar"
                    android:src="@drawable/baseline_add_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarEdad"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/restar"
                    android:src="@drawable/boton_restar_24dp" />

            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCivil"
        android:layout_width="186dp"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorLayout"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCivil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:layout_marginStart="4dp"
                android:fontFamily="monospace"
                android:text="@string/textTitleEstadoCivil"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent" />
            <!-- Lista desplegable estado Civil (Spinner) -->
            <Spinner
                android:id="@+id/spinnerCivil"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:entries="@array/textSpinnerCivil"
                android:fontFamily="monospace"
                android:popupBackground="@color/spinnerColor"
                android:spinnerMode="dropdown"
                android:textColor="@color/spinnerColor" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textHijos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:fontFamily="monospace"
        android:gravity="left"
        android:text="@string/hijos"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:translationZ="4dp"
        app:layout_constraintStart_toStartOf="@+id/cardHijos"
        app:layout_constraintTop_toTopOf="@+id/cardHijos"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardHijos"
        android:layout_width="186dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="@color/colorLayout"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/numHijos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"

                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSumarHijo"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginEnd="26dp"
                    android:contentDescription="@string/sumar"
                    android:src="@drawable/baseline_add_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarHijo"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:contentDescription="@string/restar"
                    android:src="@drawable/boton_restar_24dp" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Button para pasar a la siguiente vista y calcular el resultado -->

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="338dp"
        android:layout_height="69dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="monospace"
        android:text="@string/clickCalculo"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="407dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="303dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="487dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="676dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />


</androidx.constraintlayout.widget.ConstraintLayout>